--- a/client/.gitignore
+++ b/client/.gitignore
@@ -18,7 +18,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.json
+package.json
+package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
